--- a/app_beans.html
+++ b/app_beans.html
@@ -167,11 +167,11 @@
   <button id="showOrderButton" class="drink-button">Show Order</button>     
   <button id="clearOrderButton" class="drink-button">Clear Order</button>
 
-  <script src="https://code.jquery.com/jquery-3.2.1.min.js" ></script>
+  <script src="https://code.jquery.com/jquery-3.2.1.min.js" integrity="sha256-hwg4gsxgFZhOsEEamdOYGBf13FyQuiTwlAQgxVSNgt4=" crossorigin="anonymous"></script>
   <script type="text/javascript">
     var orderHistoryCash = [];
     var orderHistoryCard = [];
-    var totalSumCash = 0; 
+    var totalSumCash = 0;
     var totalSumCard = 0;
 
     function getSelectedDrinks() {
