--- a/app_beans.html
+++ b/app_beans.html
@@ -68,7 +68,7 @@
     }
 
     .card-button {
-        background-color: #f44336; /* Red for Card */
+        background-color: #f44336; 
     }
 
     #order-history {
